# smart-dm

./: .gitignore  CMakeLists.txt  Cargo.toml  Cross.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
crates/adas/: Cargo.toml
crates/adas/src/: analysis.rs  config.rs  lane.rs  lib.rs  object.rs  sign.rs
crates/alerting/: Cargo.toml
crates/alerting/src/: lib.rs  manager.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  rate_limit.rs
crates/api/src/routes/: alerts.rs  mod.rs  predictions.rs  sensors.rs
crates/camera-capture/: Cargo.toml
crates/camera-capture/src/: ffi.rs  frame.rs  imu.rs  lib.rs
crates/cloud-sync/: Cargo.toml
crates/cloud-sync/src/: lib.rs
crates/data-validator/: Cargo.toml
crates/data-validator/src/: error.rs  filter.rs  lib.rs  normalizer.rs  validator.rs
crates/dms/: Cargo.toml
crates/dms/src/: analysis.rs  config.rs  detector.rs  lib.rs  state.rs
crates/driver-auth/: Cargo.toml
crates/driver-auth/src/: lib.rs
crates/event-fusion/: Cargo.toml
crates/event-fusion/src/: lib.rs
crates/fallback/: Cargo.toml
crates/fallback/src/: lib.rs  rules.rs
crates/feature-engine/: Cargo.toml
crates/feature-engine/src/: features.rs  fft.rs  lib.rs  statistics.rs
crates/inference-engine/: Cargo.toml
crates/inference-engine/src/: batcher.rs  engine.rs  lib.rs
crates/obd-protocol/: Cargo.toml
crates/obd-protocol/src/: client.rs  error.rs  ffi.rs  lib.rs  pid.rs  protocol.rs
crates/obd-scheduler/: Cargo.toml
crates/obd-scheduler/src/: lib.rs  scheduler.rs
crates/ring-buffer/: Cargo.toml
crates/ring-buffer/src/: buffer.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  repository.rs
include/: camera_capture.h  can_obd_driver.h
src_cpp/: c_api.cpp  cabin_capture.cpp  can_driver.cpp  frame_decoder.cpp  imu_driver.cpp  obd_client.cpp  road_capture.cpp  timing_service.cpp
