[package]
name = "adas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Advanced Driver Assistance System - lane departure, forward collision, traffic signs"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
ndarray = { workspace = true }
tract-onnx = { workspace = true }
camera-capture = { path = "../camera-capture" }

[dev-dependencies]
proptest = { workspace = true }
