[package]
name = "alerting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Confidence calibration, alert deduplication, and severity mapping"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
config = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
