[package]
name = "data-validator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Input validation, range checking, and normalization for OBD-II data"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
