[package]
name = "inference-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ONNX ML inference engine using tract for fault prediction"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tract-onnx = { workspace = true }
tract-core = { workspace = true }
serde = { workspace = true }
feature-engine = { path = "../feature-engine" }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
